\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{version 3.6.3}{
   \itemize{
     \item{Fix bug when counting minOverlap=0 object}
     \item{Improve how BiocParallel used between DiffBind and GreyListChIP}
  }
}

\section{version 3.6.2}{
   \itemize{
     \item{Improve how BiocParallel used between DiffBind and GreyListChIP}
     \item{Warnings when samples are merged (duplicate bam files)}
  }
}

\section{version 3.6.1}{
   \itemize{
     \item{Re-normalize after applying black/greylists}
  }
}

\section{Version 3.6}{

Mostly bug fixes, defaults for spike-in normalization.

\itemize{
 \item{Change default spike-in normalization to NATIVE (TLE/TMM)}
 \item{Change spike-in normalization to use reference library sizes}
 \item{Fix bug involving Called columns in reports}
 \item{Maintain FRiP calculations}
 \item{Improve dba.plotProfile sample labels}
 \item{Fix issue with package:parallel}
 \item{Fix error/warning in dba.blacklist relating to non-matching 
 chromosome names}
 \item{Update man page for dba.report to clarify how fold changes are 
 reported when bNormalized=FALSE.}
 \item{Add some new test conditions to GenerateDataFiles.R}
}
}

\section{Version 3.4}{
\itemize{
 \item{Fix bFlip issues}
 \item{Fix bug where mode not passed to summarizeOverlaps}
 \item{Add $inter.feature config parameter}
 \item{Re-compute FDR when fold change other than 0 is specified}
 \item{Remove most gc() calls for performance}
}
}


\section{Version 3.2}{
\itemize{
 \item{New type of plot: dba.plotProfile()}
 \item{Can mix single-end and paired-end bam files}
 \item{Various bug fixes}
}
}

\section{Version 3.0}{
\itemize{
\item{
This is a major release of DiffBind and the new version will be 3.0.

The main upgrade involves how the modelling and normalization are done. 
DiffBind now supports models and contrasts of arbitrary complexity 
using either/both DESeq2 or/and edgeR,
as well as a myriad of normalization options.

NB:
